window-service: don't do a grab when in unified mode

Classic ash doesn't do grabs when in unified mode. For compatibility
this patch makes the window-service not execute a grab when in unified
mode. To execute a grab leads to ash doing the wrong event conversion.

BUG=804460,773348
TEST=covered by test

Change-Id: I6d402ec4eb5d68946f98757cc4a56e850bd1e8b0
Reviewed-on: https://chromium-review.googlesource.com/884569
Commit-Queue: Scott Violet <sky@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531828}
Former-commit-id: 84b41dc990a9810ae67a3f6583faadf72422fdb0